Fixed configurator editor z-index and added production appsettings

--- a/BurgerBar/ClientApp/src/app/components/configurator/configurator-editor/configurator-editor.component.scss
+++ b/BurgerBar/ClientApp/src/app/components/configurator/configurator-editor/configurator-editor.component.scss
@@ -36,6 +36,7 @@ form {
         display: flex;
         text-align: center;
         align-items: center;
+        z-index: 50;
 
         @include media-breakpoint-up(md) {
             left: calc(20% + 20px);
